v1: keep root probe compatible with minSdk 26